UI Alignment issue in Test report page in individual instruction reponse data

--- a/src/app/pages/test-reports/test-reports.component.scss
+++ b/src/app/pages/test-reports/test-reports.component.scss
@@ -41,17 +41,38 @@
 }
 
 .passed {
+    width: 30%;
+    padding-left: 4rem;
+    margin-right: 2.6rem;
     //background-color: #d4edda; // Light green for passed
-  color: #1a6f2e;
+    color: #1a6f2e;
 }
 
 .failed {
+    width: 30%;
+    padding-left: 4rem;
+    margin-right: 2.6rem;
     //background-color: #f8d7da; // Light red for failed
-  color: #d03140;
+    color: #d03140;
+}
+.skip{
+    width: 30%;
+    padding-left: 4rem;
+    margin-right: 2.6rem;
+    color: #9E9E9E;
+}
+.untested{
+    width: 30%;
+    padding-left: 4rem;
+    margin-right: 2.6rem;
+    color: #705555;
 }
 
 .description-label {
     word-break: break-word;
+}
+.time-div{
+    width: 17%;
 }
 
 .downloadbtn {
@@ -59,7 +80,7 @@
     color: #00A3AB;
     font-weight: 800;
     cursor: pointer;
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 nb-accordion-item-header {
@@ -126,28 +147,29 @@ nb-accordion::-webkit-scrollbar-thumb:hover {
     height: 100%;
 
 }
-.flex-col{
+
+.flex-col {
     display: flex;
     align-items: center;
     width: 100%;
-    justify-content: space-between;
-    // padding:0 2% 0 5%;
-    margin-left: 3%;
-  margin-bottom: 1%;
-  margin-right: 1%;
+    margin-left: 1rem;
+    margin-bottom: 1%;
+    margin-right: 1%;
 }
+
 .heading {
     font-weight: 800;
     font-size: 1.7em;
     margin-bottom: .5em;
 }
 
-.header-title{
-  left: 50%;
-  position: absolute;
-  top:40%;
-  transform: translateX(-50%) translateY(-50%);
+.header-title {
+    left: 50%;
+    position: absolute;
+    top: 40%;
+    transform: translateX(-50%) translateY(-50%);
 }
+
 .dividerDiv {
     border-bottom: 2px solid #eee;
     width: 100%;
@@ -201,21 +223,22 @@ nb-accordion::-webkit-scrollbar-thumb:hover {
 }
 
 
-@media screen and (min-width:1093px )  and (max-width:1242px ){
-  .parentDiv {
-    height: 29.5em;
-    overflow-y: scroll;
-    overflow-x: hidden;
-  }
+@media screen and (min-width:1093px) and (max-width:1242px) {
+    .parentDiv {
+        height: 29.5em;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
 }
+
 .custom-div {
     background-color: #f0f0f0;
     padding: 10px;
     margin-bottom: 10px;
     text-align: center;
-  }
-.testcase-status{
-    //font-size: 0.8rem;
-    //font-weight: bold;
-  width: 41%;
+}
+
+.testcase-status {
+    width: 45%;
+    margin-right: 3rem;
 }
